# nmbp-admin-backend/src/main/api/routes/masterRouter.ts
@@ -7,4 +7,6 @@ masterRouter.get("/states", masterController.getStates);
 
 masterRouter.get("/districts/:state_id", masterController.getDistrictsByState);
 
+masterRouter.get("/activities", masterController.getActivities);
+
 export default masterRouter;
